--- a/Eldrow/Eldrow/Eldrow/AppShell.xaml
+++ b/Eldrow/Eldrow/Eldrow/AppShell.xaml
@@ -29,17 +29,12 @@
         </ResourceDictionary>
     </Shell.Resources>
 
-    <!--<TabBar>
-        <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
-        <ShellContent Title="Browse" Icon="icon_feed.png" ContentTemplate="{DataTemplate local:ItemsPage}" />
-    </TabBar>-->
-
-    <!--
+   <!--
         If you would like to navigate to this content you can do so by calling
         await Shell.Current.GoToAsync("//LoginPage");
     -->
     <TabBar>
-        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:GamePage}" />
     </TabBar>
 
 
