--- a/Eldrow/Eldrow/Eldrow/AppShell.xaml
+++ b/Eldrow/Eldrow/Eldrow/AppShell.xaml
@@ -3,7 +3,8 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:Eldrow.Views"
        Title="Eldrow"
-       x:Class="Eldrow.AppShell">
+       x:Class="Eldrow.AppShell"
+       >
 
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
@@ -23,18 +24,31 @@
                 <Setter Property="Shell.TabBarForegroundColor" Value="White"/>
                 <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF"/>
                 <Setter Property="Shell.TabBarTitleColor" Value="White"/>
+                
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
+
+            <Style TargetType="Label">
+                <Setter Property="FontSize"
+                        Value="30" />
+                <Setter Property="FontFamily"
+                        Value="Calibri" />
+                <Setter Property="FontAttributes"
+                        Value="Bold" />
+            </Style>
+            
         </ResourceDictionary>
     </Shell.Resources>
+
 
    <!--
         If you would like to navigate to this content you can do so by calling
         await Shell.Current.GoToAsync("//LoginPage");
     -->
     <TabBar>
-        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:GamePage}" />
+        <ShellContent Route="GamePage" Title="ELDROW" 
+                      ContentTemplate="{DataTemplate local:GamePage}" />
     </TabBar>
 
 
