UI Cosmetic enhancements

--- a/Eldrow/Eldrow/Eldrow/App.xaml
+++ b/Eldrow/Eldrow/Eldrow/App.xaml
@@ -7,7 +7,7 @@
     -->
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#E0B0FF</Color>
+            <Color x:Key="Primary">#7C336A</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
