--- a/Eldrow/Eldrow/Eldrow/Views/GamePage.xaml
+++ b/Eldrow/Eldrow/Eldrow/Views/GamePage.xaml
@@ -37,38 +37,34 @@
                     Command="{Binding GoCommand}" 
                     Margin="30"/>
 
-            <CollectionView ItemsSource="{Binding Play.GuessedWords}"
-                      HorizontalOptions="Fill"
-                      Margin="10"
-                      Grid.Row="2"
-                      Grid.Column="0"
-                      Grid.ColumnSpan="2">
+        <CollectionView ItemsSource="{Binding Play.GuessedWords}"
+                        HorizontalOptions="Fill"
+                        Margin="10"
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2">
             <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                            <Grid Margin="8">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                
-                                
-                                <!--<Label Text="{Binding GuessedWord.Text}"
-                                       Grid.Column="0"
-                                       VerticalTextAlignment="Center"
-                                       CharacterSpacing="10" />-->
+                <DataTemplate>
+                    <Grid Margin="8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
 
-                        <FlexLayout Direction="Row" Grid.Column="0" 
-                                        BindableLayout.ItemsSource="{Binding Characters}"
-                                        VerticalOptions="Center">
+                        <FlexLayout Direction="Row"
+                                    Grid.Column="0"
+                                    BindableLayout.ItemsSource="{Binding Characters}"
+                                    VerticalOptions="Center">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
-                                        <Label WidthRequest="100" VerticalOptions="Center" 
-                                               VerticalTextAlignment="Center"
-                                               Text="{Binding Val}"/>
+                                    <Label WidthRequest="100"
+                                           VerticalOptions="Center"
+                                           VerticalTextAlignment="Center"
+                                           Text="{Binding Val}" />
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
-                            
+
                         </FlexLayout>
 
                         <controls:Ball Grid.Column="1"
@@ -82,9 +78,9 @@
                                        Margin="3"
                                        VerticalOptions="Center" />
                     </Grid>
-                    </DataTemplate>
+                </DataTemplate>
 
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </Grid>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 </ContentPage>
